Add words about p_eFq method pictures.

--- a/p3/p3.tex
+++ b/p3/p3.tex
@@ -1264,6 +1264,126 @@ $ a_2 \ge 0 $
 
 Определение $p_e$ по (\ref{atu:eq:p_eFq}) будем обозначать $p_{eFq}$.
 
+Рассмотрим работу этого метода при тех же условиях,
+при которых иллюстрировался метод $p_{eql}$.
+Прежде всего проиллюстрируем вариант,
+когда центральная точка --- наихудшая~(рис.~\ref{atu:f:p_eFq_bad}).
+
+
+\begin{figure}[htb!]
+  \centerline{\includegraphics[width=60\TW]{p/p_eFq/q_p_eFq_bad.png}}
+  \caption{Определение точки $p_e$ методом $p_{eFq}$ в худшем случае}
+  \label{atu:f:p_eFq_bad}
+\end{figure}
+
+Как видно из графика, в этом случае аппроксимация зависимости $F(p)$
+параболой $F_{ap}(p)$ достаточно точная, но положительная определённость величины
+$a_2$ показывает, что найденный экстремум соотвествует минимуму,
+что совершенно не помогает в определении $p_e$. В то же время,
+действие метода в этом случае --- выбор одной из граничных точек
+правильно указывает направление.
+
+Противоположный случай, когда центральная точка --- наилучшая,
+но всё же недостаточно ``хорошая'', представлен на рис.~\ref{atu:f:p_eFq_good}.
+
+\begin{figure}[htb!]
+  \centerline{\includegraphics[width=60\TW]{p/p_eFq/q_p_eFq_good.png}}
+  \caption{Определение точки $p_e$ методом $p_{eFq}$ в случае, когда центральная точка --- наилучшая, но нет пересечения $q(p)$ с $q_o$ }
+  \label{atu:f:p_eFq_good}
+\end{figure}
+
+В отличие от метода $p_{eql}$, для рассматриваемого метода
+этот случай не является особым. Найденное значение $p_e$
+достаточно хорошо соответствует точке, в которой
+$q(p)$ максимально приближается к $q_o$. Это вполне разумное поведение,
+с учётом того, что при приближении к этой точке, по уточнённым данным
+может быть найдено пересечение $q(p) = q_o$. С другой стороны,
+это может быть локальный экстремум, не соответствующий искомому значению $p_o$,
+как и представлено в этом примере.
+
+Пример неопределённого случая, когда на рабочем интервале есть
+два пересечения $q(p)$ с $q_o$, представлени на рис.~\ref{atu:f:p_eFq_double}.
+
+\begin{figure}[htb!]
+  \centerline{\includegraphics[width=60\TW]{p/p_eFq/q_p_eFq_double.png}}
+  \caption{Определение точки $p_e$ методом $p_{eFq}$ в случае двух пересечений $q(p)$ с $q_o$ }
+  \label{atu:f:p_eFq_double}
+\end{figure}
+
+Неопределённость условия не позволяет выбрать какое-либо определённое и
+наилучшее в любом случае поведение. В данном конкрентом случае
+был выбран вариант, уводящий от исходного $p_o$.
+Более того, в отличие от метода $p_{eql}$,
+алгоритмически данный случай выделить невозможно, оприраясь только на значения
+функции качества. Как результат --- нет возможности отметить этот случай снижением
+величины $S$.
+
+Рассмотрим более определённый случай, для которого метод $p_{eql}$
+получал оценку $p_e$ путём экстраполяции (рис.~\ref{atu:f:p_eFq_extra}).
+
+\begin{figure}[htb!]
+  \centerline{
+    \includegraphics[width=49\TW]{p/p_eFq/q_p_eFq_p33.png}
+    \hfill
+    \includegraphics[width=49\TW]{p/p_eFq/q_p_eFq_p90.png}
+  }
+  \caption{Определение точки $p_e$ методом $p_{eFq}$ при экстраполяции за пределы $[p_l,p_r]$ }
+  \label{atu:f:p_eFq_extra}
+\end{figure}
+
+Здесь наблюдаются серьёзные отличия от метода $p_{eql}$.
+Прежде всего, поведение предыдущего метода
+в этом, достаточно простом случае, было достаточно однозначным.
+Достаточно было по заданным правилам уменьшать величину $S$
+при удалении от рабочего интервала, для отображения
+уменьшения степени уверенности в полученном значении.
+Данный метод, как видно на представленных графиках,
+в сходных случаях может давать совершенно различные результаты.
+Первый график, соответствующий $p_o=0.33$,
+демонстрирует не только значительную ошибку идентификации,
+но и тот факт, что нет возможности отделить этот случай от
+наиболее благоприятного, при $p_o \in [p_l,p_r]$.
+Второй график ($p_o=0.9$), хотя исходные условия принципиально не отличаются
+от первого, реализует условие $a_2 \ge 0 $, т.е. непозможность
+определить $p_e$ за счёт аппроксимации второго порядка, и следовательно,
+вынуждает в качестве приближения использовать $p_r$.
+
+Действия метода в наиболее благоприятном случае, когда
+ $p_o \in [p_l,p_r]$, представлены на рис.~\ref{atu:f:p_eFq_intra}.
+
+
+\begin{figure}[htb!]
+  \centerline{
+    \includegraphics[width=49\TW]{p/p_eFq/q_p_eFq_p49.png}
+    \hfill
+    \includegraphics[width=49\TW]{p/p_eFq/q_p_eFq_p70.png}
+  }
+  \caption{Определение точки $p_e$ методом $p_{eFq}$ при   $p_o \in [p_l,p_r]$}
+  \label{atu:f:p_eFq_intra}
+\end{figure}
+
+Как и следовало ожидать, оценка $p_e$ в этом случае вполне состоятельна,
+несмотря на то, что в соожих условиях
+наблюдается различный уровень ошибки идентификации.
+
+% TODO q_gamma
+
+В целом, на основании полученных результатов, можно данный метод
+демонстирует нескольхо худшие реультата, чем $p_{eql}$.
+Наиболее серьёзным недостатком следует считать
+невозможность в произвольном случае достаточно уверенно
+определить величину $S$, которая на уровне координатора поиска
+позволяет выбрать наиболее значимых агентов, а на уровне агента ---
+избежать избыточной динамики вдали от $p_o$.
+Вторым по важности недостатком является необходимость
+корректной настройки величины $q_\gamma$, пусть и в достаточно широких пределах.
+Среди достоинств метода следует отметить более простую
+алгоритмическую организацию, что может быть существенно
+при реализации системы идентификации в условиях с ограниченным вычислительными
+ресурсами.
+
+
+
 \paragraph{Определение $p_e$ методом COG по значениям функции качества в 3 точках}
 
 Достаточно простым и малозатратным с точки зрения вычислений
