Move old p3 pictures to attic

--- a/p3/p3.tex
+++ b/p3/p3.tex
@@ -1142,20 +1142,7 @@ $p_e$ в дальнейшем изложении будем обозначать
 \(\tau\) модель была или не была достаточно адекватна
 объекту.
 
-% TODO: full rewrite,
-\begin{figure}[htb!]
-  \centerline{\includegraphics[width=0.6\textwidth]{pq_1x2.png} }
-  \caption{ $q(p)$, $F(q(p))$, part1 }
-  \label{atu:pq_1x2}
-\end{figure}
 
-\begin{figure}[htb!]
-  \centerline{\includegraphics[width=0.6\textwidth]{pq_2x8.png} }
-  \caption{$q(p)$, $F(q(p))$, part2 }
-  \label{atu:pq_2x8}
-\end{figure}
-
-% }}}2
 
 
 Наличие истории и возможность перемещаться дают возможность
@@ -1278,7 +1265,7 @@ $ a_2 \ge 0 $
 
 Как видно из графика, в этом случае аппроксимация зависимости $F(p)$
 параболой $F_{ap}(p)$ достаточно точная, но положительная определённость величины
-$a_2$ показывает, что найденный экстремум соотвествует минимуму,
+$a_2$ показывает, что найденный экстремум соответствует минимуму,
 что совершенно не помогает в определении $p_e$. В то же время,
 действие метода в этом случае --- выбор одной из граничных точек
 правильно указывает направление.
@@ -1302,7 +1289,7 @@ $q(p)$ максимально приближается к $q_o$. Это впол
 как и представлено в этом примере.
 
 Пример неопределённого случая, когда на рабочем интервале есть
-два пересечения $q(p)$ с $q_o$, представлени на рис.~\ref{atu:f:p_eFq_double}.
+два пересечения $q(p)$ с $q_o$, представлен на рис.~\ref{atu:f:p_eFq_double}.
 
 \begin{figure}[htb!]
   \centerline{\includegraphics[width=60\TW]{p/p_eFq/q_p_eFq_double.png}}
@@ -1344,7 +1331,7 @@ $q(p)$ максимально приближается к $q_o$. Это впол
 но и тот факт, что нет возможности отделить этот случай от
 наиболее благоприятного, при $p_o \in [p_l,p_r]$.
 Второй график ($p_o=0.9$), хотя исходные условия принципиально не отличаются
-от первого, реализует условие $a_2 \ge 0 $, т.е. непозможность
+от первого, реализует условие $a_2 \ge 0 $, т.е. невозможность
 определить $p_e$ за счёт аппроксимации второго порядка, и следовательно,
 вынуждает в качестве приближения использовать $p_r$.
 
@@ -1363,13 +1350,13 @@ $q(p)$ максимально приближается к $q_o$. Это впол
 \end{figure}
 
 Как и следовало ожидать, оценка $p_e$ в этом случае вполне состоятельна,
-несмотря на то, что в соожих условиях
+несмотря на то, что в схожих условиях
 наблюдается различный уровень ошибки идентификации.
 
 % TODO q_gamma
 
 В целом, на основании полученных результатов, можно данный метод
-демонстирует нескольхо худшие реультата, чем $p_{eql}$.
+демонстрирует несколько худшие результаты, чем $p_{eql}$.
 Наиболее серьёзным недостатком следует считать
 невозможность в произвольном случае достаточно уверенно
 определить величину $S$, которая на уровне координатора поиска
