Add pics and words to p3 with low/high q_gamma

--- a/p3/p3.tex
+++ b/p3/p3.tex
@@ -1353,7 +1353,55 @@ $q(p)$ максимально приближается к $q_o$. Это впол
 несмотря на то, что в схожих условиях
 наблюдается различный уровень ошибки идентификации.
 
-% TODO q_gamma
+Рассмотрим влияние на работоспособность рассматриваемого метода
+чувствительности функции качества, определяемой величиной $q_\gamma$.
+Исходное значение этой величины ($q_\gamma=0.2$) для
+тестовой задачи было подобрано экспериментально.
+Рассмотрим изменение результатов работы метода в при $p_o \in [p_l,p_r]$
+в условиях сильно завышенной чувствительности $q_\gamma=0.05$ (рис.~\ref{atu:f:p_eFq_intra_005}).
+
+
+\begin{figure}[htb!]
+  \centerline{
+    \includegraphics[width=49\TW]{p/p_eFq/q_p_eFq_p49_qgamma005.png}
+    \hfill
+    \includegraphics[width=49\TW]{p/p_eFq/q_p_eFq_p70_qgamma005.png}
+  }
+  \caption{Определение точки $p_e$ методом $p_{eFq}$ при завышенной чувствительности функции качества}
+  \label{atu:f:p_eFq_intra_005}
+\end{figure}
+
+Как и следовало ожидать, избыточная чувствительность приводит к тому,
+что функция качества отлична от нуля в очень узком диапазоне значений параметра,
+что приводит к  практической бессмысленности используемой аппроксимации,
+и неадекватным результатам идентификации.
+
+Существенно другие результаты показывает метод в условиях
+недостаточной чувствительности, то ест при
+относительно больших значениях $q_\gamma$ (рис.~\ref{atu:f:p_eFq_intra_200}).
+
+\begin{figure}[htb!]
+  \centerline{
+    \includegraphics[width=49\TW]{p/p_eFq/q_p_eFq_p49_qgamma200.png}
+    \hfill
+    \includegraphics[width=49\TW]{p/p_eFq/q_p_eFq_p70_qgamma200.png}
+  }
+  \caption{Определение точки $p_e$ методом $p_{eFq}$ при недостаточной чувствительности функции качества}
+  \label{atu:f:p_eFq_intra_200}
+\end{figure}
+
+Довольно странным является тот факт, что при значительном уменьшении
+чувствительности ошибка идентификации растёт очень слабо.
+В первую очередь это связано с тем, что в этих условиях
+сама аппроксимация кривой Гаусса параболой становится более точной.
+Для других видов функции качества это не так.
+Более того, приведённые примеры рассчитывались при условии
+отсутствия ошибок измерения. При недостаточной чувствительности
+$F_l \approx F_c \approx F_r \approx 1$, и малые изменения $F$
+приведут к значительной ошибке идентификации.
+
+% TODO: good q_\gamma
+
 
 В целом, на основании полученных результатов, можно данный метод
 демонстрирует несколько худшие результаты, чем $p_{eql}$.
