Add 'ramp' pictures to p3, and minimal words about.

--- a/p3/p3.tex
+++ b/p3/p3.tex
@@ -1760,7 +1760,7 @@ $p_O \in [p_l, p_r]$, и значение $p_e$ определяется
 на участке экстраполяции величина ошибки линейно падает при $A \to p_c - p_o$. При дальнейшем росте $A$
 ошибка умеренно растёт, причём в этом росте можно выделить два участка.
 Первый характеризуется относительно резким ростом ошибки, связанным
-с увеличением влияние высочастоных нелинейных членов,
+с увеличением влияние высокочастотных нелинейных членов,
 второй --- достаточно плавным подъемом.
 
 График, соответствующий методу $p_{eFq}$ проявляет явную зависимость
@@ -1773,10 +1773,10 @@ $p_O \in [p_l, p_r]$, и значение $p_e$ определяется
 Также этот график отличается меньшей ошибкой в режиме экстраполяции,
 но в целом этот метод проигрывает предыдущему.
 
-График ошибки для метода $p_{eFc}$ подчёркивает ограниченную примеримость этого метода.
-Аналогично предыдущему методу, существует область наиболее благопрятных для
+График ошибки для метода $p_{eFc}$ подчёркивает ограниченную применимость этого метода.
+Аналогично предыдущему методу, существует область наиболее благоприятных для
 проведения идентификации значений $q_\gamma$. Однако,
-уровень ошибки практически не подадает при $p_l \to p_o$,
+уровень ошибки практически не падает при $p_l \to p_o$,
 то есть этот метод не выигрывает в точности при концентрации
 агентов в окрестности $p_o$.
 
@@ -1810,7 +1810,7 @@ $p_O \in [p_l, p_r]$, и значение $p_e$ определяется
 ошибки измерения.
 Метод $p_{eFq}$ позволяет достичь пренебрежимо малой, но не нулевой
 ошибки везде, за исключением области экстраполяции и завышенной чувствительности.
-При этом, уровень ошибок даже в неблагоприяных областях
+При этом, уровень ошибок даже в неблагоприятных областях
 относительно мал. Напротив, метод $p_{eFc}$,
 даже в идеальных условиях продолжает показывать
 посредственные результаты.
@@ -2794,7 +2794,7 @@ $\overline{e}_{ba}$ (``best approximation'').
 
 \subsection{Постановка тестовых задач}
 
-\Cmt{ q dem }
+\Cmt{ q dem, ramp }
 
 Для оценивания возможностей системы идентификации
 отслеживать как гладкие, так и скачкообразное изменения параметров,
@@ -2831,6 +2831,182 @@ $\overline{e}_{ba}$ (``best approximation'').
 равномерности работы метода на различных участках $[p_{\min}, p_{\max}]$,
 а также для иллюстрации динамики ансамбля поисковых агентов.
 
+
+
+\subsection{Равновесные состояния поисковых агентов на текстовой задаче}  % {{{2
+
+Рассмотрим конфигурации равновесного состояния поисковых агентов
+при применении различных поисковых тактик из числа рассмотренных.
+Для данной задачи нет необходимости рассматривать поведение
+координатора поиска, поэтому три правых символа классификации
+здесь значения не имеют.
+Использовалось 5 поисковых агентов: $A_0 \ldots A_4$,
+начальные координаты которых ($p_{сi,0}$)
+были распределены по поисковому диапазоны равномерно.
+Зависимость $p_o(t)$
+задана как (\ref{atu:eq:po_t_ramp}), при этом величины $p_o$ и $U_p$
+выбраны таки образом, чтобы покрыть весь рабочий диапазон:
+$p_0 = p_{с0,0} = 20$, $ U_p = p_{с4,0} - p_{с0,0} = 40$.
+
+Так как в данной задаче исследуются равновесные состояния, то
+необходимо обеспечить квазиравновесность системы.
+Это было достигнуто за счёт того, что
+в значение $q(p)$ не взносилась дополнительная задержка,
+а общее время наблюдения $T$ было выбрано заведомо и значительно большим,
+чем характерное время переходных процессов.
+
+При анализе равновесных состояний конфигураций $p_{ci}(t)$,
+которые в силу квазистационарности и выбранной зависимости $p_o(t)$
+эквивалентны конфигурациям $p_{ci}(p_o)$,
+в первую очередь обращалось внимание на поведение агентов
+вблизи $p_o$: требуется наличие как минимум двух агентов в этой окрестности,
+допустимо наличие трёх, наличие большего количества представляется нерациональным.
+Следующей важным свойством является отсутствие колебаний,
+которые свидетельствовали бы о неустойчивости системы идентификации в целом.
+Также рассматривалось поведение дальних по отношению к $p_o$
+агентов, так как чрезмерное их смещение может негативно
+сказываться на динамических характеристиках метода.
+
+На рис.~\ref{atu:f:qls_ramp_Fq3rlovnAAF} приведены результаты моделирования
+при использовании метода Fq3rlovnAAF.
+Следует отметить, что практически во всём диапазоне
+объект ``сопровождается'' двумя агентами, и только в области
+``передачи'' следующие группе это число возрастает до трёх.
+Следует отметить отсутствие колебаний. К отрицательным
+явлениям имеет смысл отнести то, что дальние агенты
+прижимаются к границе выделенной им области, что вызвано
+использованием единичного множителя в определении $f_e$. Также необходимо отметить
+увеличение ``дистанции сопровождения'' в окрестности точки $p_o=40$, $t=10$.
+
+\begin{figure}[htb!]
+  \centerline{
+    \includegraphics[width=0.8\textwidth]{p/ramp/qls-p_t_pi_Fq3rlovnAAF_ramp.png}
+  }
+  \caption{Равновесные конфигурации агентов при использовании метода Fq3rlovnAAF}
+  \label{atu:f:qls_ramp_Fq3rlovnAAF}
+\end{figure}
+
+На рис.~\ref{atu:f:qls_ramp_Fq3rlFvnAAF} приведены результаты моделирования
+при использовании метода Fq3rlFvnAAF.
+Основное отличие от предыдущего
+случая заключается в использовании коэффициента $S$ в определении $f_e$.
+Как результат, самые дальние агенты смещаются на меньшее расстояние.
+В то же время, поведение агентов, ``сопровождающих'' $p_o$,
+остаётся практически без изменений.
+
+
+\begin{figure}[htb!]
+  \centerline{
+    \includegraphics[width=0.8\textwidth]{p/ramp/qls-p_t_pi_Fq3rlFvnAAF_ramp.png}
+  }
+  \caption{Равновесные конфигурации агентов при использовании метода Fq3rlFvnAAF}
+  \label{atu:f:qls_ramp_Fq3rlFvnAAF}
+\end{figure}
+
+На рис.~\ref{atu:f:qls_ramp_Fq3rlSvnAAF} приведены результаты моделирования
+при использовании метода Fq3rlSvnAAF.
+Здесь в качестве множителя при определении силы $f_e$ используется
+величина $S$, которая не определяется достаточно корректно
+для используемого метода оценки $p_{eFq}$. Как результат,
+поведение агентов становится не вполне адекватным.
+``Сопровождение'' как таковое осталось, однако,
+возросшая дистанция должна привести к увеличению ошибки идентификации.
+Поведение остальных агентов, хоть и объяснимо, не способствует
+проведению идентификации.
+
+\begin{figure}[htb!]
+  \centerline{
+    \includegraphics[width=0.8\textwidth]{p/ramp/qls-p_t_pi_Fq3rlSvnAAF_ramp.png}
+  }
+  \caption{Равновесные конфигурации агентов при использовании метода Fq3rlSvnAAF}
+  \label{atu:f:qls_ramp_Fq3rlSvnAAF}
+\end{figure}
+
+
+На рис.~\ref{atu:f:qls_ramp_Fq3rlWvnAAF} приведены результаты моделирования
+при использовании метода Fq3rlWvnAAF.
+В этом случае в качестве множителя используется величина $W$,
+в определении которой используется уже рассмотренная в предыдущем случае величина $S$.
+В результате получившаяся картина слабо отличается от предыдущего случая,
+хотя определённая ненулевая работоспособность всё-таки присутствует.
+
+\begin{figure}[htb!]
+  \centerline{
+    \includegraphics[width=0.8\textwidth]{p/ramp/qls-p_t_pi_Fq3rlWvnAAF_ramp.png}
+  }
+  \caption{Равновесные конфигурации агентов при использовании метода Fq3rlWvnAAF}
+  \label{atu:f:qls_ramp_Fq3rlWvnAAF}
+\end{figure}
+
+Следующая группа методов отличается от предыдущей тем, что для оценки величины $p_e$
+используется метод $p_{eql}$, который показал в целом лучшие результаты
+при использовании триплета неподвижных агентов.
+На рис.~\ref{atu:f:qls_ramp_ql3rlovnAAF} приведены результаты моделирования
+при использовании метода ql3rlovnAAF, который характеризуется
+единичным множителем в определении  $f_e$. Основное отличие от
+аналогичного метода Fq3rlovnAAF заключается в том, что в окрестности
+точки $t=10$ расстояние между ``сопровождающими'' агентами не растёт,
+следовательно, не следует ожидать и роста ошибки идентификации в окрестности этой точки.
+Поведение ``дальних'' агентов остаётся аналогичным.
+
+
+\begin{figure}[htb!]
+  \centerline{
+    \includegraphics[width=0.8\textwidth]{p/ramp/qls-p_t_pi_ql3rlovnAAF_ramp.png}
+  }
+  \caption{Равновесные конфигурации агентов при использовании метода ql3rlovnAAF}
+  \label{atu:f:qls_ramp_ql3rlovnAAF}
+\end{figure}
+
+Вполне ожидаемые результаты получены при применении
+метода ql3rlFvnAAF, которые иллюстрирует
+рис.~\ref{atu:f:qls_ramp_ql3rlFvnAAF}.
+Введение коэффициента $F$ приводит к меньшему смещению ``дальних''
+агентов, и, потенциально --- к уменьшению
+времени переключения при скачкообразном изменении $p_o$.
+
+\begin{figure}[htb!]
+  \centerline{
+    \includegraphics[width=0.8\textwidth]{p/ramp/qls-p_t_pi_ql3rlFvnAAF_ramp.png}
+  }
+  \caption{Равновесные конфигурации агентов при использовании метода ql3rlFvnAAF}
+  \label{atu:f:qls_ramp_ql3rlFvnAAF}
+\end{figure}
+
+
+На рис.~\ref{atu:f:qls_ramp_ql3rlSvnAAF} приведены результаты моделирования
+при использовании метода ql3rlSvnAAF.
+
+\begin{figure}[htb!]
+  \centerline{
+    \includegraphics[width=0.8\textwidth]{p/ramp/qls-p_t_pi_ql3rlSvnAAF_ramp.png}
+  }
+  \caption{Равновесные конфигурации агентов при использовании метода ql3rlSvnAAF}
+  \label{atu:f:qls_ramp_ql3rlSvnAAF}
+\end{figure}
+
+
+На рис.~\ref{atu:f:qls_ramp_ql3rlWvnAAF} приведены результаты моделирования
+при использовании метода ql3rlWvnAAF.
+
+\begin{figure}[htb!]
+  \centerline{
+    \includegraphics[width=0.8\textwidth]{p/ramp/qls-p_t_pi_ql3rlWvnAAF_ramp.png}
+  }
+  \caption{Равновесные конфигурации агентов при использовании метода ql3rlWvnAAF}
+  \label{atu:f:qls_ramp_ql3rlWvnAAF}
+\end{figure}
+
+
+% }}}2
+
+\subsection{Ошибки идентификации в квазистационарном случае на тестовой задаче}  % {{{2
+
+% }}}2
+
+\subsection{Динамика агентов и поисковых координаторов на тестовой задаче}  % {{{2
+
+% }}}2
 
 % }}}1
 
