Yet more words about eqib. agent state in p3.

--- a/p3/p3.tex
+++ b/p3/p3.tex
@@ -2974,8 +2974,14 @@ $p_0 = p_{с0,0} = 20$, $ U_p = p_{с4,0} - p_{с0,0} = 40$.
 \end{figure}
 
 
-На рис.~\ref{atu:f:qls_ramp_ql3rlSvnAAF} приведены результаты моделирования
-при использовании метода ql3rlSvnAAF.
+Существенное отличие в равновесной конфигурации агентов
+наблюдается при переходе от способа оценки $p_e$ от $p_{eFc}$ к $p_{eql}$,
+например,
+при использовании метода ql3rlSvnAAF
+(рис.~\ref{atu:f:qls_ramp_ql3rlSvnAAF}).
+Так как в этом случае применяется значительно более корректное определение величины~$S$,
+то и распределение агентов потенциально является более благоприятным для
+проведения идентификации.
 
 \begin{figure}[htb!]
   \centerline{
@@ -2986,8 +2992,14 @@ $p_0 = p_{с0,0} = 20$, $ U_p = p_{с4,0} - p_{с0,0} = 40$.
 \end{figure}
 
 
-На рис.~\ref{atu:f:qls_ramp_ql3rlWvnAAF} приведены результаты моделирования
-при использовании метода ql3rlWvnAAF.
+В этих условиях успользование в качестве множителя величины~$W$
+не приводит к кардинальноу изменению поведения агентов
+(рис.~\ref{atu:f:qls_ramp_ql3rlWvnAAF}) --- метода ql3rlWvnAAF.
+Отличие проявляется в меньшем смещении удалённых
+агентов, что, без существенного изменения точности
+должно приводить к уменьшеню времени реакции системы на скачкообразное
+изменение параметра.
+
 
 \begin{figure}[htb!]
   \centerline{
@@ -2996,6 +3008,19 @@ $p_0 = p_{с0,0} = 20$, $ U_p = p_{с4,0} - p_{с0,0} = 40$.
   \caption{Равновесные конфигурации агентов при использовании метода ql3rlWvnAAF}
   \label{atu:f:qls_ramp_ql3rlWvnAAF}
 \end{figure}
+
+Таким образом, на этом этапе можно сделать предварительный отбор
+применяемых методов. Достаточно очевидно,
+что в тех случаях, когда для оценивания $p_e$
+используется метод $p_{eFq}$, то не имеет смысла
+в качестве множителя при $f_e$ использовать $S$ или $W$.
+Наилучшим выбором в этих условиях будует использование
+значения функции качества $F$. К тому же,
+что подтверждается и результатами исследования качества аппроксимации $q(p)$,
+использование методов, использующих кусочно-линейную аппроксимацию,
+является предпочтительным. В этих условиях
+становится оправданным в качестве вышеупомянутого множителя
+использовать $S$ и $W$, причём последний вариант представляется более оправданным.
 
 
 % }}}2
