Add tables for id errors in qr case

--- a/p3/p3.tex
+++ b/p3/p3.tex
@@ -2846,7 +2846,7 @@ $\overline{e}_{ba}$ (``best approximation'').
 Зависимость $p_o(t)$
 задана как (\ref{atu:eq:po_t_ramp}), при этом величины $p_o$ и $U_p$
 выбраны таки образом, чтобы покрыть весь рабочий диапазон:
-$p_0 = p_{с0,0} = 20$, $ U_p = p_{с4,0} - p_{с0,0} = 40$.
+$p_0 = p_{c0,0} = 20$, $ U_p = p_{c4,0} - p_{c0,0} = 40$.
 
 Так как в данной задаче исследуются равновесные состояния, то
 необходимо обеспечить квазиравновесность системы.
@@ -3026,6 +3026,59 @@ $p_0 = p_{с0,0} = 20$, $ U_p = p_{с4,0} - p_{с0,0} = 40$.
 % }}}2
 
 \subsection{Ошибки идентификации в квазистационарном случае на тестовой задаче}  % {{{2
+
+
+Сводные результаты приведены в таблице~\ref{atu:t:err_test_id_Fq}.
+
+
+\begin{table}
+  \caption{Ошибки идентификации в квазистационарном случае при аппроксимации $p_e$ методом $p_{eFq}$}
+  \label{atu:t:err_test_id_Fq}
+  \begin{center}
+    \begin{tabular}{|l|c|c|c|c|c|c|c|c|}
+    \hline
+    Method      & gc    & lc    & qc    & bc    & ge     & le    & qe    & be    \\ \hline
+    Fq3rlovnAAF & 2.020 & 0.778 & 0.135 & 0.332 & 0.750  & 0.547 & 0.135 & 0.135 \\ \hline
+    Fq3rlovnAAS & 0.733 & 0.797 & 0.959 & 1.033 & 0.385  & 0.319 & 0.321 & 0.318 \\ \hline
+    Fq3rlovnAAW & 0.679 & 0.554 & 0.530 & 0.521 & 0.364  & 0.296 & 0.247 & 0.245 \\ \hline
+    Fq3rlFvnAAF & 1.980 & 0.778 & 0.136 & 0.334 & 0.761  & 0.546 & 0.136 & 0.136 \\ \hline
+    Fq3rlFvnAAS & 0.734 & 0.798 & 0.960 & 1.036 & 0.386  & 0.321 & 0.323 & 0.320 \\ \hline
+    Fq3rlFvnAAW & 0.680 & 0.555 & 0.530 & 0.524 & 0.366  & 0.297 & 0.249 & 0.247 \\ \hline
+    Fq3rlSvnAAF & 2.520 & 2.082 & 1.180 & 1.352 & 1.569  & 1.575 & 1.160 & 1.164 \\ \hline
+    Fq3rlSvnAAS & 1.585 & 1.521 & 1.441 & 2.077 & 1.248  & 1.164 & 1.203 & 1.204 \\ \hline
+    Fq3rlSvnAAW & 1.540 & 1.322 & 0.985 & 1.390 & 1.233  & 1.152 & 1.156 & 1.162 \\ \hline
+    Fq3rlWvnAAF & 2.541 & 2.092 & 1.208 & 1.368 & 1.568  & 1.573 & 1.187 & 1.192 \\ \hline
+    Fq3rlWvnAAS & 1.608 & 1.548 & 1.458 & 2.095 & 1.272  & 1.189 & 1.230 & 1.232 \\ \hline
+    Fq3rlWvnAAW & 1.562 & 1.355 & 1.002 & 1.406 & 1.259  & 1.180 & 1.184 & 1.191 \\ \hline
+    \end{tabular}
+  \end{center}
+\end{table}
+
+\begin{table}
+  \caption{Ошибки идентификации в квазистационарном случае при аппроксимации $p_e$ методом $p_{eql}$}
+  \label{atu:t:err_test_id_ql}
+  \begin{center}
+    \begin{tabular}{|l|c|c|c|c|c|c|c|c|}
+    \hline
+    Method      & gc    & lc    & qc    & bc    & ge     & le    & qe    & be    \\ \hline
+    ql3rlovnAAF & 1.936 & 0.707 & 0.177 & 0.259 & 0.132  & 0.031 & 0.030 & 0.030 \\ \hline
+    ql3rlovnAAS & 1.747 & 1.488 & 0.311 & 0.538 & 0.117  & 0.057 & 0.030 & 0.030 \\ \hline
+    ql3rlovnAAW & 0.983 & 0.632 & 0.185 & 0.259 & 0.074  & 0.031 & 0.030 & 0.030 \\ \hline
+    ql3rlFvnAAF & 1.891 & 0.705 & 0.181 & 0.260 & 0.144  & 0.031 & 0.031 & 0.031 \\ \hline
+    ql3rlFvnAAS & 1.770 & 1.512 & 0.318 & 0.563 & 0.116  & 0.057 & 0.031 & 0.031 \\ \hline
+    ql3rlFvnAAW & 0.976 & 0.630 & 0.186 & 0.260 & 0.074  & 0.031 & 0.031 & 0.031 \\ \hline
+    ql3rlSvnAAF & 1.799 & 0.717 & 0.180 & 0.268 & 0.165  & 0.033 & 0.032 & 0.032 \\ \hline
+    ql3rlSvnAAS & 1.782 & 1.552 & 0.312 & 0.577 & 0.117  & 0.060 & 0.032 & 0.032 \\ \hline
+    ql3rlSvnAAW & 0.978 & 0.639 & 0.183 & 0.268 & 0.075  & 0.033 & 0.032 & 0.032 \\ \hline
+    ql3rlWvnAAF & 1.693 & 0.716 & 0.184 & 0.269 & 0.163  & 0.033 & 0.033 & 0.033 \\ \hline
+    ql3rlWvnAAS & 2.024 & 1.549 & 0.319 & 0.589 & 0.097  & 0.061 & 0.033 & 0.033 \\ \hline
+    ql3rlWvnAAW & 0.984 & 0.638 & 0.184 & 0.269 & 0.075  & 0.033 & 0.033 & 0.033 \\ \hline
+    \end{tabular}
+  \end{center}
+\end{table}
+
+
+
 
 % }}}2
 
