Add 'scan' picture to p3.
And first part of words about it.

--- a/p3/p3.tex
+++ b/p3/p3.tex
@@ -3027,11 +3027,158 @@ $p_0 = p_{c0,0} = 20$, $ U_p = p_{c4,0} - p_{c0,0} = 40$.
 
 \subsection{Ошибки идентификации в квазистационарном случае на тестовой задаче}  % {{{2
 
+Равновесные конфигурации агентов, представленные выше,
+дают информацию только о потенциальных качествах систем идентификации.
+В первую очередь, качество определяется ошибкой идентификации,
+и в первую очередь следует исследовать её зависимости для квазистационарного случая.
+При этом, следует проверять как достижение самого стационарного режима,
+та и зависимость ошибки от $p_o$. Для грубого сравнения достаточно
+использовать среднеквадратичное значение ошибки на всём рабочем диапазоне параметра,
+визуально контролируя форму зависимости $e(p_o)$.
+В качестве тестовой задачи используется~(\ref{atu:eq:q_dem})
+при условиях~(\ref{atu:eq:q_dem_all}). При этом для каждого метода
+проводилась серия вычислительных экспериментов с различным значением $p_o$.
+Остальные параметры как системы идентификации, так и условия эксперименты выбирались
+таким образом, чтобы с одной стороны, обеспечить квазистационарность
+в конце эксперимента, а с другой --- достичь хорошей скорости
+идентификации, для предоставления возможности исследовать динамические свойства
+без перенастройки параметров.
 
-Сводные результаты приведены в таблице~\ref{atu:t:err_test_id_Fq}.
+Представление полученных результатов осложняется тем, что
+с учётом только основных рассмотренных элементов
+в классификации, получается 192 возможных метода.
+Для большей компактности представления результатов
+воспользуемся тем фактом, что в рассмотренных методах
+координатор поиска не настраивает параметры агентов.
+Поэтому на одном графике можно отобразить зависимости
+для восьми методов, что соответствует полному перебору
+двух предпоследних символов в классификации,
+которые для обозначения группы методов будут
+указаны как ``AA'', а конкретное значение этих символов
+будет указано в легенде графика. Например,
+кривая, обозначенная как ``$e_{ge}$'' для группы методов
+``Fq3rlovnAAW'' будет описывать
+ошибку идентификации для метода ``Fq3rlovngeW''.
+Таким образом результаты можно представить на 24 графиках,
+что также представляется несколько избыточным.
+
+В первую очередь рассмотрим методы, которые давали
+недостаточно адекватные результаты при
+исследовании равновесных конфигураций агентов, а именно ---
+методы, которые для аппроксимации $p_e$
+используют метод $p_{qFc}$, и при этом в качестве
+множителя в определении $f_e$ используют величины $S$ или $W$.
+В качестве примера рассмотрим группу методов ``Fq3rlWvnAAF'',
+зависимости $e(p_o)$ для которой приведены на рис.~\ref{atu:f:Fq3rlWvnAAF_scan}.
+
+\begin{figure}[htb!]
+  \centerline{
+    \includegraphics[width=0.8\textwidth]{p/scan/qls-p_p_e_Fq3rlWvnAAF_scan.png}
+  }
+  \caption{Зависимости $e(p_o)$ для методов Fq3rlWvnAAF в квазистационарном случае}
+  \label{atu:f:Fq3rlWvnAAF_scan}
+\end{figure}
+
+Анализ полученных зависимостей позволяет сделать следующие выводы.
+Во-первых, несмотря на недостаточно адекватные равновесные конфигурации
+самих агентов, методы идентификации в целом не потеряли работоспособности.
+При этом ни один из методов работы координатора поиска
+не даёт заметно выделяющихся результатов.
+Лучшие результаты продемонстрировали методы
+``Fq3rlWvnqeF'' и ``Fq3rlWvnbeF''.
+Аналогичные результаты были получены для все методов групп
+``Fq3rlSvnAAA'' и ``Fq3rlWvnAAA'', конкретный ``лучший'' метод
+мог меняться, но в целом картина оставалась такой же.
+
+В качестве более удачного примера рассмотрим
+группу методов ``Fq3rlFvnAAF'' (рис.~\ref{atu:f:Fq3rlFvnAAF_scan}).
+
+\begin{figure}[htb!]
+  \centerline{
+    \includegraphics[width=0.8\textwidth]{p/scan/qls-p_p_e_Fq3rlFvnAAF_scan.png}
+  }
+  \caption{Зависимости $e(p_o)$ для методов Fq3rlFvnAAF в квазистационарном случае}
+  \label{atu:f:Fq3rlFvnAAF_scan}
+\end{figure}
+
+При общем меньшем уровне ошибки идентификации, среди различных подходов
+к реализации методов работы поисковых координаторов появились явные лидеры и
+выраженные зависимости. Прежде всего, методы, использующие значения $p_e$
+каждого агента, показывают меньшую ошибку, по сравнению а аналогичными методами,
+но использующие $p_c$. Это свидетельствует о том, что
+использование подкреплённых соответствующим измеренным значением $F_c$ величин
+хуже, чем использование аппроксимированных значений $p_e$,
+для которых соответствующее значение функции качества неизвестно.
+Методы, использующие глобальный ``COG'', в целом
+дают худшие результаты, чем использующие различные локальные оценки.
+Лучшие результаты показали методы
+``Fq3rlFvnqeF'' и ``Fq3rlFvnbeF''.
+
+Использование при оценке значимости агента величины $S$ вместо $F$
+даёт несколько противоречивые результаты (рис.~\ref{atu:f:Fq3rlFvnAAS_scan}).
+
+\begin{figure}[htb!]
+  \centerline{
+    \includegraphics[width=0.8\textwidth]{p/scan/qls-p_p_e_Fq3rlFvnAAS_scan.png}
+  }
+  \caption{Зависимости $e(p_o)$ для методов Fq3rlFvnAAS в квазистационарном случае}
+  \label{atu:f:Fq3rlFvnAAS_scan}
+\end{figure}
+
+Если значимость агента оценивается только по его локальной
+``самооценке'', то худшие методы показывают несколько
+лучшие результаты, а лучшие --- наоборот, несколько
+худшие.
+При этом следует помнить, что величина $S$
+для методов ``Fq3\ldots'' не имеет достаточно корректного представления.
+Группу лидеров составляют методы
+``Fq3rlFvnleS'', ``Fq3rlFvnqeS'' и ``Fq3rlFvnbeS''.
+
+Использование при оценке значимости агента величины $W$,
+несмотря на то, что её определении участвует уже рассмотренная величина $F$
+даёт промежуточные результаты (рис.~\ref{atu:f:Fq3rlFvnAAW_scan}).
+
+\begin{figure}[htb!]
+  \centerline{
+    \includegraphics[width=0.8\textwidth]{p/scan/qls-p_p_e_Fq3rlFvnAAW_scan.png}
+  }
+  \caption{Зависимости $e(p_o)$ для методов Fq3rlFvnAAW в квазистационарном случае}
+  \label{atu:f:Fq3rlFvnAAW_scan}
+\end{figure}
+
+Несмотря не несколько худшие результаты, показанные лучшими
+методами, в целом все методы этой группы показывают
+весьма неплохие результаты. Нет ни значительных прыжков для ``bc'',
+ни размаха ``ge''.
+В этой группе методов лучшие результаты показывают
+``Fq3rlFvnqeS'' и ``Fq3rlFvnbeS''.
 
 
-\begin{table}
+Рассмотрим, какие изменения произойдут, если использовать
+единичный множитель в определении $f_e$ на примере группы методов ``Fq3rlovnAAW''
+(рис.~\ref{atu:f:Fq3rlovnAAW_scan}).
+
+\begin{figure}[htb!]
+  \centerline{
+    \includegraphics[width=0.8\textwidth]{p/scan/qls-p_p_e_Fq3rlovnAAW_scan.png}
+  }
+  \caption{Зависимости $e(p_o)$ для методов Fq3rlovnAAW в квазистационарном случае}
+  \label{atu:f:Fq3rlovnAAW_scan}
+\end{figure}
+
+Несмотря на заметную разницу в равновесной конфигурации агентов
+для методов ``Fq3rlFvnAAW'' и ``Fq3rlovnAAW'',
+разница в ошибке идентификации практически не заметна.
+Это связано с тем, что агенты, положение которых изменилось,
+вносят несущественный вклад в полученное значение $p_\mathrm{id}$.
+Однако, это справедливо только для квазистационарного случая.
+Тем не менее, это даёт возможность сократить количество методов для
+анализа на данном этапе.
+
+Сводные результаты среднеквадратичных ошибок идентификации, для методов ``Fq3r\ldots''
+приведены в таблице~\ref{atu:t:err_test_id_Fq}.
+
+\begin{table}[htb!]
   \caption{Ошибки идентификации в квазистационарном случае при аппроксимации $p_e$ методом $p_{eFq}$}
   \label{atu:t:err_test_id_Fq}
   \begin{center}
@@ -3054,7 +3201,19 @@ $p_0 = p_{c0,0} = 20$, $ U_p = p_{c4,0} - p_{c0,0} = 40$.
   \end{center}
 \end{table}
 
-\begin{table}
+Нижняя половина этой таблицы соответствует методам,
+которые показали свою ограниченную пригодность, и в дальнейшем
+рассматриваться не будут, по крайней мере до тих пор,
+пока для них не появится достаточно корректное определение величины $S$.
+Верхней половина таблицы позволяет обобщить выводы о том, что
+глобальные методы координаторов показывают худшие результаты, чем локальные,
+использование $p_e$ предпочтительнее $p_c$,
+и лучшие результаты демонстрируют методы ``\ldots qeA''  и ``\ldots beA''.
+
+Сводные результаты среднеквадратичных ошибок идентификации, для методов ``Fq3r\ldots''
+приведены в таблице~\ref{atu:t:err_test_id_ql}.
+
+\begin{table}[htb!]
   \caption{Ошибки идентификации в квазистационарном случае при аппроксимации $p_e$ методом $p_{eql}$}
   \label{atu:t:err_test_id_ql}
   \begin{center}
